2004-11-16  Roland Illig  <roland.illig@gmx.de>

	* extfs/patchfs.in: Allow extraction and deletion of patches
	whose filenames start with "../" or "./".

2004-11-15  Leonard den Ottolander  <leonard * den ottolander nl>

	* vfs.c: Changed types for mc_chmod, mc_chown, mc_mknod to mode_t,
	uid_t, gid_t, and dev_t where appropriate.
	* vfs.h: Likewise.

	Patch extended by Roland Illig.

2004-11-15  Leonard den Ottolander  <leonard * den ottolander nl>

	* vfs.c: fix MC_NAMEOP macro calls to use the canonicalized path.

2004-11-10  Roland Illig  <roland.illig@gmx.de>

	* audio.in (audiofs_list): Fixed quoting issue.
	(audiofs_copyout): Likewise.
	* uar.in (mcarfs_copyin): Likewise.
	* uha.in (mchafs_copyout): Likewise.
	* ulha.in (mc_lha_fs_run): Likewise.

2004-11-08  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* vfs.c (vfs_prefix_to_class): Avoid last class (localfs) that would
	accept any prefix.

2004-11-04 Mike Gorchak <mike@malva.ua>

        * cpio.c (cpio_create_entry): Added initial support for the Special
	Named Files. Needed on QNX Neutrino.
	* utilvfs.c (vfs_parse_filetype): Likewise.

2004-11-02  Roland Illig  <roland.illig@gmx.de>

	* ftpfs.c: Add fallback to type int if socklen_t is not provided.

2004-11-01  Andriy Gritsenko <andrej * rep kiev ua>

	* tar.c (tar_read_header): Fix pathname canonicalization.

2004-10-29  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* extfs/iso9660.in (mcisofs_list): Fix regular expression for stripping
	of file name. Use autotools macro for awk instead full path.

2004-10-28  Leonard den Ottolander  <leonard * den ottolander nl>

	* extfs/iso9660.in (mcisofs_list): Fix stripping of file name in awk code.

2004-10-28  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* fish.c (fish_open_archive_int): Fix missed "%s".

2004-10-27  Roland Illig  <roland.illig@gmx.de>

	* ftpfs.c (ftpfs_initconn): Replace int with socklen_t where
	appropriate. (ftpfs_open_data_connection): Likewise.
